updated .image to fix alignment with Picture2.png

--- a/static/styles.css
+++ b/static/styles.css
@@ -30,7 +30,7 @@ body{
 .image img{
     width:100%;
     margin-left: -100px;
-    margin-top: 50px;
+    margin-top: 15%;
 }
 #mainPic{
     max-width: 75%;
